- fixed responsive Problem when Footer Menu is activated - fixed responsive Problem with too long Page-Titles - fixed responsive Problem width „Fullwidth“ Article Teasers - Added Widget Area in Header for Social Icons, etc.

--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@
 	Theme Name: Branches
     Text Domain: branches
 	Theme URI: http://www.flohauck.de/wordpress-themes/branches/
-	Version: 1.07
+	Version: 1.1
 	Description: Branches is a simple, minimalistic magazine/blog theme. It has only a few options but that should be enough. Its fully retina ready and dont need a single image or much additional javascript stuff for the layout itself, so its very lightweight. You can choose between 5 different Fonts and set an individual accent color.
 	Tags: blog, featured-images, sticky-post, theme-options, translation-ready, custom-menu, right-sidebar, threaded-comments, one-column, two-columns
 	Author: Flo Hauck
@@ -75,6 +75,13 @@ input[type="search"]::-webkit-search-results-decoration {
 /* -------------------------------------------------------------------------------- */
 /*	1. Document setup
 /* -------------------------------------------------------------------------------- */
+
+@function linear($vMin, $vMax, $valMin, $valMax) {
+    $m: ($valMax - $valMin) / ($vMax - $vMin);
+    $c: $valMin - ($vMin * $m);
+    $m2: $m * 100;
+    @return calc(#{$m2}vw + 1 * #{$c}px);
+}
 
 
 $colorBlack: #1f1f1f;
@@ -162,32 +169,30 @@ header {
 	position: relative;
 	padding: 65px 0 55px 0;
 	
-	.social {
+	.header-widget {
 		position: absolute;
 		right: 0;
-		top: 25px;
+		top: 15px;
 		font-size: 0.85rem;
 		line-height: 0.85rem;
 		color: $colorMiddleGrey;
 		text-transform: uppercase;
 		text-align: right;
 		
-		@media only screen and (max-width: 520px) {
-			text-align: center;
-			right: auto;
-			left: 0;
-			width: 100%;
+		.widget {
+			margin-top: 0;
+			padding: 0 !important;
+			width: 100% !important;
+			
+			.widget-content {
+				ul {
+					margin: 0;
+				}
+			}
 		}
 		
 		a {
 			color: inherit;
-			margin-left: 15px;
-			display: inline-block;
-			
-			@media only screen and (max-width: 520px) {
-				margin-left: 7px;
-				margin-right: 7px;	
-			}
 			
 			&:hover {
 				color: $colorBlack;
@@ -197,13 +202,18 @@ header {
 }
 
 #logo-maintitle {
-	font-size: 3.75rem;
-	line-height: 4.25rem;
+	line-height: 1.15;
 	font-weight: 800;
 	font-style: italic;
 	color: $colorBlack;
 	text-align: center;
 	text-transform: uppercase;
+	
+	font-size: linear(420, 1180, 32, 52);
+	
+	@media (min-width: 1180px) {
+		font-size: 52px;
+	}
 	
 	a {
 		color: inherit;
@@ -216,6 +226,16 @@ header {
 	font-weight: 600;
 	color: $colorMiddleGrey;
 	text-align: center;
+	
+	@media only screen and (max-width: 820px) {
+		font-size: 1.15rem;	
+		line-height: 1.65rem;
+	}
+	
+	@media only screen and (max-width: 520px) {
+		font-size: 1.05rem;	
+		line-height: 1.55rem;
+	}
 	
 	a {
 		color: inherit;
@@ -474,6 +494,10 @@ footer {
 	background-color: $colorBorder;
 	padding: 60px 0;
 	
+	@media only screen and (max-width: 520px) {
+		padding: 20px 0;	
+	}
+	
 	a {
 		&:hover {
 			color: $colorBlack;
@@ -499,6 +523,13 @@ footer {
 			color: $colorMiddleGrey;
 			
 		}
+		
+		@media only screen and (max-width: 520px) {
+			float: none;
+			text-align: left;
+			margin: 30px 0;	
+		}
+		
 	}
 	
 	.footer-navi {
@@ -507,6 +538,12 @@ footer {
 		line-height: 1.3rem;
 		color: $colorMiddleGrey;
 		text-align: left;
+		
+		@media only screen and (max-width: 520px) {
+			float: none;
+			text-align: left;
+			margin: 30px 0;		
+		}
 		
 		ul {
 			list-style-type: none;
@@ -974,6 +1011,11 @@ table {
 			
 			@media only screen and (max-width: 820px) {
 				width: 50%;	
+			}
+			
+			@media only screen and (max-width: 520px) {
+				display: block;
+				width: 100%;
 			}
 			
 			.teaser-image {
@@ -1450,13 +1492,28 @@ table {
 		font-size: 1rem;
 		line-height: 1.628rem;	
 		position: relative;
-		padding-left: 15px;	
 		
-		&:before {
-			content: '» ';
-			display: block;
-			position: absolute;
-			left: 0;
+	}
+}
+
+.widget_archive,
+.widget_categories,
+.widget_meta,
+.widget_pages,
+.widget_recent_comments,
+.widget_recent_entries {
+	.widget-content {
+		ul {
+			li {
+				padding-left: 15px;	
+				
+				&:before {
+					content: '» ';
+					display: block;
+					position: absolute;
+					left: 0;
+				}
+			}
 		}
 	}
 }
